Fixed make dist errors in swig path when swig binary isn't installed.
Also remove hardcoded values in swig/Makefile.am

--- a/swig/Makefile.am
+++ b/swig/Makefile.am
@@ -1,9 +1,9 @@
-SWIG=/usr/bin/swig
+#SWIG=/usr/bin/swig
 EXTRA_DIST = libtrace.i
 
-lib_LTLIBRARIES = libtrace.la
-libtrace_la_SOURCES = libtrace_wrap.c
-INCLUDES = -I/usr/local/python2.3
+#lib_LTLIBRARIES = libtrace.la
+#libtrace_la_SOURCES = libtrace_wrap.c
+#INCLUDES = -I/usr/local/python2.3
 
 libtrace_wrap.c: libtrace.i
 	$(SWIG) -python $(SWIG_ARGS) -o $@ $<
