--- a/configure.in
+++ b/configure.in
@@ -54,10 +54,10 @@ fi
 AC_PROG_LIBTOOL
 
 AC_ARG_ENABLE(swig,
-[  --disable-swig		don't generate python bindings],
-lt_use_python=true,lt_use_python=false)
+[  --disable-swig		don't generate swig bindings],
+lt_use_swig=true,lt_use_swig=false)
 
-if test "x$lt_use_python" = "xtrue"
+if test "x$lt_use_swig" = "xtrue"
 then
 	AM_PATH_PYTHON(2.3)
 	AC_PROG_SWIG(1.3.21)
