Use DLT_RAW instead of DLT_NULL when writing out raw IP. Also don't strip the 4 byte FCS off non-ethernet traces.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -195,11 +195,15 @@ enum {
 	TRACE_ERR_UNSUPPORTED	= -7
 };
 
-/** Enumeration of DLT types supported by libtrace */
+/** Enumeration of DLT types supported by libtrace 
+ * These aren't actually DLTs, but LINKTYPE_'s, so becareful when modifying 
+ * this.
+ */ 
 typedef enum {
 	TRACE_DLT_NULL = 0,
 	TRACE_DLT_EN10MB = 1,
 	TRACE_DLT_ATM_RFC1483 = 11,
+	TRACE_DLT_RAW = 101,
 	TRACE_DLT_IEEE802_11 = 105,
 	TRACE_DLT_LINUX_SLL = 113,
 	TRACE_DLT_PFLOG = 117,
