Add man pages (And install them!) for all the various tools

--- a/tools/tracereport/Makefile.am
+++ b/tools/tracereport/Makefile.am
@@ -5,3 +5,5 @@ tracereport_SOURCES = tracereport.c tracereport.h report.h \
 			contain.c contain.h \
 			ttl_report.c tos_report.c port_report.c error_report.c \
 			flow_report.c dir_report.c protocol_report.c
+
+man_MAN=tracereport.1
