--- a/tools/tracesplit/Makefile.am
+++ b/tools/tracesplit/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = tracesplit tracesplit_dir
 bin_SCRIPTS = tracefilter traceconvert
 
-man_MANS = tracesplit.1 tracefilter.1 traceconvert.1
+man_MANS = tracesplit.1 tracefilter.1 traceconvert.1 tracesplit_dir.1
 EXTRA_DIST = $(man_MANS) $(bin_SCRIPTS)
 
 include ../Makefile.tools
