Add new legacy tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -43,7 +43,7 @@ test-format-all: test-format test-decode test-decode2
 	@echo Radius Decoder
 	@LD_LIBRARY_PATH="$(libdir)" \
 	./test-decode2 pcap:traces/radius.pcap
-	@for i in erf pcap wtf pcapfile duck legacyatm; do	\
+	@for i in erf pcap wtf pcapfile duck legacyatm legacyeth legacypos; do \
 		echo \* Read $$i;				\
 		rm -f traces/*.out.*;				\
 		LD_LIBRARY_PATH="$(libdir)"			\
@@ -89,16 +89,19 @@ test-convert-all: test-convert
 	@echo " * wtf -> pcap"
 	@rm -f traces/*.out.*
 	@LD_LIBRARY_PATH="$(libdir)" ./test-convert wtf pcap
-	@echo " * legacyatm -> pcapfile"
-	@rm -f traces/*.out.*
-	@LD_LIBRARY_PATH="$(libdir)" ./test-convert wtf pcapfile
-	@echo " * legacyatm -> pcap"
-	@rm -f traces/*.out.*
-	@LD_LIBRARY_PATH="$(libdir)" ./test-convert wtf pcap
-	@echo " * wtf -> wtf"
+	#@echo " * wtf -> wtf"
 	#@rm -f traces/*.out.*
 	#@LD_LIBRARY_PATH="$(libdir)" ./test-convert wtf wtf
-	@echo " * duck -> duck"
+	#@echo " * legacyatm -> pcapfile"
+	#@rm -f traces/*.out.*
+	#@LD_LIBRARY_PATH="$(libdir)" ./test-convert legacyatm pcapfile
+	@echo " * legacyeth -> pcapfile"
+	@rm -f traces/*.out.*
+	@LD_LIBRARY_PATH="$(libdir)" ./test-convert legacyeth pcapfile
+	#@echo " * legacypos -> pcapfile"
+	#@rm -f traces/*.out.*
+	#@LD_LIBRARY_PATH="$(libdir)" ./test-convert legacypos pcapfile
+	#@echo " * duck -> duck"
 	#@rm -f traces/*.out.*
 	#@LD_LIBRARY_PATH="$(libdir)" ./test-convert duck duck
  
