The manpage should now get distributed for tracemerge

--- a/tools/tracemerge/Makefile.am
+++ b/tools/tracemerge/Makefile.am
@@ -1,5 +1,6 @@
 bin_PROGRAMS = tracemerge
+man_MANS = tracemerge.1
+EXTRA_DIST = $(man_MANS)
 
 include ../Makefile.tools
 tracemerge_SOURCES = tracemerge.c
-man_MANS = tracemerge.1
