Split DAG format into it's own source files - one for DAG2.4 and another for DAG2.5.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -20,12 +20,24 @@ else
 LIBTRACEIO=libtraceio-stdio.c
 endif
 
+if HAVE_DAG
+if DAG2_4
+DAGSOURCE=format_dag24.c
+else
+DAGSOURCE=format_dag25.c
+endif
+else
+DAGSOURCE=
+endif
+EXTRA_DIST=format_dag24.c format_dag25.c
+
 libtrace_la_SOURCES = $(LIBTRACEIO) trace.c common.h \
 		format_erf.c format_pcap.c format_wag.c format_legacy.c \
 		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
 		format_duck.c $(NATIVEFORMATS) $(BPFFORMATS) \
 		libtrace_int.h lt_inttypes.h \
-		linktypes.c protocols.c libtraceio.h link_wireless.c 
+		linktypes.c protocols.c libtraceio.h link_wireless.c \
+		$(DAGSOURCE) format_erf.h
 
 if DAG2_4
 nodist_libtrace_la_SOURCES = dagopts.c dagapi.c
