--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -56,7 +56,9 @@
  */
 
 #include <sys/types.h>
+#ifndef WIN32
 #include <sys/time.h>
+#endif
 
 #ifdef _MSC_VER
     /* define the following from MSVC's internal types */
