--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@
 # Now you only need to update the version number in two places - below,
 # and in the README
 
-AC_INIT([libtrace],[3.0.0beta7],[contact@wand.net.nz],[libtrace])
+AC_INIT([libtrace],[3.0.0-beta8],[contact@wand.net.nz],[libtrace])
 
 LIBTRACE_MAJOR=3
 LIBTRACE_MID=0
@@ -24,7 +24,7 @@ AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
 	examples/Makefile examples/skeleton/Makefile examples/rate/Makefile
 	docs/libtrace.doxygen 
 	lib/libtrace.h
-	swig/Makefile])
+	])
 dnl GNU C library
 dnl AC_GNU_SOURCE
 
@@ -53,17 +53,6 @@ fi
 
 AC_PROG_LIBTOOL
 
-AC_ARG_ENABLE(swig,
-[  --disable-swig		don't generate swig bindings],
-lt_use_swig=true,lt_use_swig=false)
-
-if test "x$lt_use_swig" = "xtrue"
-then
-	AM_PATH_PYTHON(2.3)
-	AC_PROG_SWIG(1.3.21)
-	SWIG_PYTHON
-fi
-
 # Checks for library functions.
 AC_PROG_GCC_TRADITIONAL
 AC_CHECK_FUNCS(socket strdup strlcpy strcasecmp strncasecmp snprintf)
@@ -81,7 +70,6 @@ AC_REPLACE_FUNCS(strndup)
 
 # Checks for header files.
 AC_HEADER_STDC
-dnl AC_CHECK_HEADERS(errno.h stdlib.h stdio.h assert.h string.h netinet/in.h assert.h errno.h fcntl.h net/ethernet.h netdb.h pcap.h stdio.h stdlib.h string.h sys/stat.h sys/types.h sys/socket.h sys/un.h unistd.h time.h sys/ioctl.h net/bpf.h pcap.h zlib.h pcap-bpf.h)
 AC_CHECK_HEADERS(pcap.h pcap-int.h pcap-bpf.h net/bpf.h sys/limits.h stddef.h inttypes.h limits.h net/ethernet.h )
 
 AC_CHECK_HEADERS(netinet/in.h)
@@ -157,6 +145,7 @@ if test "$pcapfound" = 0; then
 	AC_MSG_ERROR(libpcap0.8 or greater is required to compile libtrace. If you have installed it in a non-standard location please use LDFLAGS to specify the location of the library)
 else
 	ADD_LIBS="$ADD_LIBS -lpcap"
+	AC_DEFINE([HAVE_LIBPCAP],1,[compile with libpcap support])
 fi
 
 # configure time options for use of DAG cards
@@ -236,23 +225,12 @@ fi
 
 AC_CHECK_LIB(z, gzopen)
 
-libtrace_swig=false;
-if test -n "$SWIG"; then
-	libtrace_swig=true;
-fi
-libtrace_python=false;
-if test -n "$PYTHON"; then
-	libtrace_python=true;
-fi
-
 AM_CONDITIONAL([HAVE_BPF], [test "$ac_cv_have_decl_BIOCSETIF" = yes ])
 AM_CONDITIONAL([HAVE_DAG], [test "$libtrace_dag" = true])
 AM_CONDITIONAL([DAG2_4], [test "$libtrace_dag2_4" = true])
 AM_CONDITIONAL([HAVE_ZLIB], [test "$ac_cv_lib_z_gzopen" = yes])
 AM_CONDITIONAL([HAVE_NETPACKET_PACKET_H], [test "$libtrace_netpacket_packet_h" = true])
 AM_CONDITIONAL([LIBGDC], [test "$ac_cv_header_gdc_h" = yes])
-AM_CONDITIONAL([LIBTRACE_SWIG], [test "$libtrace_swig" = true])
-#AM_CONDITIONAL([HAVE_PYTHON], [test "$libtrace_python" = true])
 
 # Check for miscellaneous programs
 AC_CHECK_PROG([libtrace_doxygen], [doxygen], [true], [false])
@@ -296,12 +274,3 @@ else
 fi
 reportopt "Building man pages/documentation" $libtrace_doxygen
 
-if test x"$libtrace_swig" = xtrue; then
-	if test x"$libtrace_python" = xtrue; then
-		AC_MSG_NOTICE([Building swig bindings for: python])
-	else
-		AC_MSG_NOTICE([Building swig bindings for: Nothing])
-	fi
-else
-	AC_MSG_NOTICE([Not building swig bindings])
-fi
