Include man pages in release tarball

--- a/tools/tracereport/Makefile.am
+++ b/tools/tracereport/Makefile.am
@@ -1,4 +1,5 @@
 bin_PROGRAMS = tracereport
+man_MANS=tracereport.1
 
 include ../Makefile.tools
 tracereport_SOURCES = tracereport.c tracereport.h report.h \
@@ -6,4 +7,3 @@ tracereport_SOURCES = tracereport.c tracereport.h report.h \
 			ttl_report.c tos_report.c port_report.c error_report.c \
 			flow_report.c dir_report.c protocol_report.c
 
-man_MAN=tracereport.1
