--- a/tools/tracertstats/Makefile.am
+++ b/tools/tracertstats/Makefile.am
@@ -1,4 +1,5 @@
 bin_PROGRAMS = tracertstats
+man_MANS = tracertstats.1
 
 if LIBGDC
 LIBGDC_MODULES=output_png.c
@@ -13,4 +14,3 @@ OUTPUT_MODULES=output_csv.c output_html.c output_txt.c $(LIBGDC_MODULES)
 include ../Makefile.tools
 tracertstats_SOURCES = tracertstats.c output.h output.c $(OUTPUT_MODULES)
 tracertstats_LDADD = -ltrace $(OUTPUT_PNG_LD)
-man_MAN = tracertstats.1
