Updated tracereport to include all the work Josef has done

--- a/tools/tracereport/Makefile.am
+++ b/tools/tracereport/Makefile.am
@@ -1,9 +1,34 @@
-bin_PROGRAMS = tracereport
-man_MANS=tracereport.1
+## Process this file with automake to produce Makefile.in
 
+## Created by Anjuta - will be overwritten
+## If you don't want it to overwrite it,
+## 	Please disable it in the Anjuta project configuration
+
+man_MANS = tracereport.1
+EXTRA_DIST = $(man_MANS)
 include ../Makefile.tools
-tracereport_SOURCES = tracereport.c tracereport.h report.h \
-			contain.c contain.h \
-			ttl_report.c tos_report.c port_report.c error_report.c \
-			flow_report.c dir_report.c protocol_report.c
+bin_PROGRAMS = tracereport
+
+tracereport_SOURCES = \
+	tracereport.c\
+	contain.c\
+	dir_report.c\
+	error_report.c\
+	flow_report.c\
+	port_report.c\
+	protocol_report.c\
+	tos_report.c\
+	ttl_report.c\
+	tcpopt_report.c\
+	nlp_report.c\
+	ecn_report.c\
+	tcpsegment_report.c\
+	contain.h\
+	report.h\
+	tracereport.h
+
+tracereport_LDFLAGS = 
+
+tracereport_LDADD = \
+	 -ltrace
 
