Libtrace now exports the svn revision number of the distribution Added two new RT_TYPES that signify server restarts and client connection failures. Updated the INSTALL documentation. Added more option combinations to synopt_report.c The examples directory is no longer treated as EXTRA_DIST in automake

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,12 +3,12 @@ TOOLS_DIR = tools
 SUBDIRS = lib $(LIBPACKETDUMP_DIR) $(TOOLS_DIR) docs examples
 
 ACLOCAL_AMFLAGS = -I m4
-AUTOMAKE_OPTIONS = 1.5
+AUTOMAKE_OPTIONS = 1.9 foreign
 
 if HAS_DOXYGEN
 man_MANS = docs/doxygen/man/man3/trace*.3 docs/doxygen/man/man3/libtrace*.3 
 endif
-EXTRA_DIST=examples libtrace.sln libtrace.vcproj test-convert.vcproj \
+EXTRA_DIST=libtrace.sln libtrace.vcproj test-convert.vcproj \
 		   test-format.vcproj test-pcap-bpf.vcproj
 
 .PHONY: docs
@@ -21,13 +21,8 @@ bootstrap-clean:
 	$(RM) -rf autom4te.cache/
 
 dist-hook:
-	for dir in $(EXTRA_DIST); do \
-		if [ ! -d $(distdir)/$$dir ]; then continue; fi; \
-		rm -rf `find $(distdir)/$$dir -name CVS` ; \
-		rm -rf `find $(distdir)/$$dir -name .svn` ; \
-		for i in `\ls -d $(distdir)/$$dir `; do make -C $(distdir)/$$dir/$$i clean; done \
-	done
-	rm -rf $(distdir)/tools/tracereport/.{svn,deps}
+	r=`svnversion -nc . | sed -e 's/^[^:]*://;s/[A-Za-z]//'` ;\
+	sed -i "s/SVN_REVISION.*/SVN_REVISION $$r/" $(distdir)/lib/libtrace.h.in
 
 if HAS_DOXYGEN
 docs/doxygen/man/man3/*.3: docs
