Libtrace now makes the DAG driver version number available Configure didn't seem to deal very well with machines that didn't have DAG

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -131,7 +131,8 @@
             ((@LIBTRACE_MAJOR@<<16)|(@LIBTRACE_MID@<<8)|(@LIBTRACE_MINOR@))
 
 #define LIBTRACE_SVN_REVISION 0
-
+#define DAG_DRIVER_V "@DAG_VERSION_NUM@"
+    
 #ifdef __cplusplus 
 extern "C" { 
 #endif
