--- a/configure.in
+++ b/configure.in
@@ -176,6 +176,7 @@ AC_ARG_WITH(dag,
 # called multiple times for $dag_root, /root/dag, /usr/local/lib
 libtrace_dag=false
 libtrace_dag2_4=false
+dag_drv_v="DAG not present"
 if test "$with_dag" != no; then
         AC_MSG_CHECKING(whether we have DAG API)
 
@@ -212,17 +213,20 @@ if test "$with_dag" != no; then
                 libtrace_dag=false
         fi
         AC_MSG_RESULT($libtrace_dag)
-	
-	AC_MSG_CHECKING(if we are using DAG 2.4)
-	if grep '2.4.' $dag_root/VERSION > /dev/null 2>&1; then
-		libtrace_dag2_4=true
-		AC_DEFINE(DAG_VERSION_2_4, 1, [define if using DAG 2.4])
-	else
-		libtrace_dag2_4=false
-	fi
-	AC_MSG_RESULT($libtrace_dag2_4)
-fi
 
+	if test "$libtrace_dag" != false; then
+		AC_MSG_CHECKING(if we are using DAG 2.4)
+		if grep '2.4.' $dag_root/VERSION > /dev/null 2>&1; then
+			libtrace_dag2_4=true
+			AC_DEFINE(DAG_VERSION_2_4, 1, [define if using DAG 2.4])
+		else
+			libtrace_dag2_4=false
+		fi
+		AC_MSG_RESULT($libtrace_dag2_4)
+		dag_drv_v=`cat $dag_root/VERSION`
+	fi
+fi
+DAG_VERSION_NUM=$dag_drv_v
 AC_CHECK_LIB(z, gzopen)
 
 AM_CONDITIONAL([HAVE_BPF], [test "$ac_cv_have_decl_BIOCSETIF" = yes ])
@@ -247,7 +251,7 @@ AC_SUBST([PACKAGE_VERSION])
 AC_SUBST([LIBTRACE_MAJOR])
 AC_SUBST([LIBTRACE_MID])
 AC_SUBST([LIBTRACE_MINOR])
-
+AC_SUBST([DAG_VERSION_NUM])
 dnl and finally, output our Makefiles
 AC_OUTPUT
 
