Finished converting tracedump to tracepktdump, mostly dealing with Makefile.am's and configure - as well as actually changing the filenames :]

--- a/tools/tracepktdump/Makefile.am
+++ b/tools/tracepktdump/Makefile.am
@@ -1,7 +1,7 @@
-bin_PROGRAMS = tracedump
-man_MANS = tracedump.1
+bin_PROGRAMS = tracepktdump
+man_MANS = tracepktdump.1
 EXTRA_DIST = $(man_MANS)
 
 include ../Makefile.tools
-tracedump_SOURCES = tracedump.cc
-tracedump_LDADD = -ltrace -lpacketdump -lfl
+tracepktdump_SOURCES = tracepktdump.cc
+tracepktdump_LDADD = -ltrace -lpacketdump -lfl
