--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,5 +1,5 @@
 # tracedump depends on libpacketdump
-TRACEDUMP_DIR=tracedump
+TRACEDUMP_DIR=tracepktdump
 
 SUBDIRS=traceanon tracemerge tracesplit $(TRACEDUMP_DIR) tracertstats tracestats
 SUBDIRS+=tracereport
